--- a/habbits-tracker/styles.css
+++ b/habbits-tracker/styles.css
@@ -74,6 +74,7 @@ body {
 	border: none;
 	border-radius: 14px;
 	cursor: pointer;
+	text-align: center;
 }
 
 .button-icon:hover {
@@ -105,6 +106,7 @@ body {
 	cursor: pointer;
 	width: 50px;
 	height: 50px;
+	text-align: center;
 }
 .menu__add:hover {
 	background-color: #f3f0fd;
