--- a/pizza-time/src/scss/app.scss
+++ b/pizza-time/src/scss/app.scss
@@ -15,25 +15,83 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+
+  @media (max-width: 645px) {
+    width: calc(100vw - 30px);
+    margin-top: 15px;
+  }
 }
 
 .content {
   padding: 40px 0;
 
   &__title {
-    margin: 35px 0;
+    margin-top: 50px;
+    margin-bottom: 60px;
+    font-weight: 800;
+    font-size: 38px;
+
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+
+    @media (max-width: 1400px) {
+    grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 1060px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 730px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+      
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 1260px) {
+      .categories {
+        width: 100%;
+        overflow: auto;
+
+        ul {
+          width: 785px;
+        }
+      }
+
+      .sort {
+        padding-left: 20px;
+        b {
+          display: none;
+        }
+      }
+    }
+
+    @media (max-width: 820px) {
+      .categories {
+        margin-top: 30px;
+        @media (max-width: 410px) {
+          li {
+            font-size: 12px;
+            padding: 8px 20px;
+          }
+          
+        }
+
+      }
+
+      flex-direction: column-reverse;
+    }
+
   }
 }
 
@@ -51,6 +109,8 @@ body {
 }
 
 .cart {
+  padding: 0px 100px;
+
   &__top {
     display: flex;
     justify-content: space-between;
@@ -73,6 +133,10 @@ body {
         stroke-width: 1.9;
       }
     }
+  }
+
+  .content__items {
+    display: block;
   }
 
   &__clear {
