--- a/pizza-time/src/components/Search/Search.module.scss
+++ b/pizza-time/src/components/Search/Search.module.scss
@@ -6,11 +6,15 @@
         padding: 5px 10px;
         padding-left: 30px;
         font-size: 15px;
-        border: 2px solid #000;
+        border: 1px solid darkgray;
         border-radius: 10px;
         color: #000;
     
         &::placeholder {
+        }
+
+        &:focus {
+            border: 2px solid darkgray;;
         }
     }
 
