--- a/pizza-time/src/scss/app.scss
+++ b/pizza-time/src/scss/app.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .content {
-  padding: 40px 0;
+  padding: 40px 0 0 40px;
 
   &__title {
     margin-top: 50px;
@@ -36,7 +36,7 @@ body {
   &__items {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     grid-column-gap: 10px;
 
     @media (max-width: 1400px) {
