--- a/pizza-time/src/scss/app.scss
+++ b/pizza-time/src/scss/app.scss
@@ -1,4 +1,3 @@
-
 @import './variables';
 @import './libs/normalize';
 
@@ -30,7 +29,6 @@ body {
     margin-bottom: 60px;
     font-weight: 800;
     font-size: 38px;
-
   }
 
   &__items {
@@ -40,7 +38,7 @@ body {
     grid-column-gap: 10px;
 
     @media (max-width: 1400px) {
-    grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3, 1fr);
     }
 
     @media (max-width: 1060px) {
@@ -50,7 +48,6 @@ body {
     @media (max-width: 730px) {
       grid-template-columns: repeat(1, 1fr);
     }
-      
   }
 
   &__top {
@@ -84,14 +81,11 @@ body {
             font-size: 12px;
             padding: 8px 20px;
           }
-          
         }
-
       }
 
       flex-direction: column-reverse;
     }
-
   }
 }
 
@@ -109,9 +103,10 @@ body {
 }
 
 .cart {
-  padding: 0px 100px;
+  padding: 0px 50px;
 
   &__top {
+    max-height: 5vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
